  tabs.
- <Shift-Insert> can now be used to paste text starting with a hyphen.
- Following hints via the number keypad now works properly again.
- The logic for `:restart` has been revisited which should fix issues with
  relative basedirs.
- Errors while reading the state file are now displayed instead of causing a
  crash.

v1.8.1 (2019-09-27)
-------------------

Changed
~~~~~~~

- No code changes - this release only repackages the Windows/macOS
  releases due to issues with the v1.8.0 release.
- Updated dependencies for Windows/macOS releases:
  * macOS and Windows releases now ship with Qt/QtWebEngine 5.12.5. Those
    are based on Chromium 69.0.3497.128 with security fixes up to Chromium
    76.0.3809.87.
  * Qt 5.13 couldn't be used yet due to various bugs in Qt 5.13.0 and .1.

v1.8.0 (2019-09-25)
-------------------

Added
~~~~~

- New userscripts:
  * `readability-js` which uses Mozilla's node.js readability library.
  * `qute-bitwarden` which integrates the Bitwarden CLI.

Changed
~~~~~~~

- The statusbar text for passthrough mode now shows all configured bindings to
  leave the mode, not only one.
- When `:config-source` is used with a relative filename, the file is now
  searched in the config directory instead of the current working directory.
- HTML5 inputs with date/time types now enter insert mode when selected.
- `dictcli.py` now shows where dictionaries are installed to and complains when
  running it as root if doing so would result in a wrong installation path.
- The Makefile now can also run `setup.py build` when invoked without a target.
- Changes to userscripts:
  * qute-pass: Don't run `pass` if only a username is requested.
  * qute-pass: Support private domains like `myrouter.local`.
  * readability: Improved CSS styling.
- Performance improvements in various areas:
  * Loading config files
  * Typing without any completion matches
  * General keyboard handling
  * Scrolling