@@ -37,6 +37,7 @@ Fixed
   relative basedirs.
 - Errors while reading the state file are now displayed instead of causing a
   crash.
+- Crash when using `:debug-log-level` without a console attached.
 
 v1.8.1 (2019-09-27)
 -------------------
